--- a/projeto/projeto.ipynb
+++ b/projeto/projeto.ipynb
@@ -2,13 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as plt\n"
+    "import matplotlib as plt\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\analise_ frebre_ amarela\\projeto\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
    ]
   },
   {
@@ -17,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"asset\\datse.csv\")"
+    "dataset = pd.read_csv(\"C:\\\\analise_frebre_amarela\\\\asset\\dataset.csv\", encoding='latin-1', delimiter=';')"
    ]
   },
   {
